--- a/games/goba/client/index.html
+++ b/games/goba/client/index.html
@@ -123,10 +123,8 @@
                         <hr />
                         <p>The server is written in Go and communicates with clients using websockets. The server runs
                             at 64 ticks per second (TPS). TPS is the number of times per second clients receive updates
-                            from the server. The client was built using Typescript and Vue.
-                            GoBA is deployed using AWS Elastic Beanstalk. For more details and the full source code see
-                            the
-                            GitHub repository.
+                            from the server. The client was built using Typescript and Vue. For more details and the
+                            full source code see the GitHub repository.
                         </p>
                         <div class="mb-4">
                             <a href="https://github.com/danielholmes839/GoBA"
